--- a/asteroids.vcxproj.filters
+++ b/asteroids.vcxproj.filters
@@ -54,5 +54,8 @@
     <ClInclude Include="Game.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Textures.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
